// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Golden Master Rules Output Snapshots > should generate claude rules 1`] = `
"# CLAUDE.md - OpenSpec-Ex Protocol

# OpenSpec Workflow Rules (Enhanced Edition)

This project follows **OpenSpec Spec-Driven Development (SDD)** with Single Source of Truth (SSOT) discovery, Subagent Research Delegation, proactive Q&A interviewing, proposal self-audit verification, Anti-Execution Guardrails, and interactive spec review.

## 1. Explore Phase (\`explore\`)
When exploring changes, ideas, or problems:
1. **Explore Stance & Anti-Execution Guardrail**:
   - Explore mode is **strictly for thinking, discovery, and freezing requirements**, NEVER for implementing application code.
   - Do NOT emit generic IDE \`implementation_plan.md\` planning files or execute code changes during Explore mode.
   - All thinking and requirements MUST be frozen exclusively into \`explore.md\`.
2. **Subagent Delegation Protocol**:
   - When exploring multi-module architectures or deep codebases, delegate targeted research to subagents (*Codebase Mapper*, *Data & Schema Auditor*, *Blast Radius Analyst*).
   - Subagents save full briefs to \`openspec/changes/<change-id>/discovery/*.md\` and return concise ~200-word summaries.
3. **Verbatim Prompt Capture**: Always capture the user's initial verbatim prompt into context without losing requirements.
4. **Proactive Interviewing**: Ask 3–5 sharp, targeted questions to clarify boundaries, edge cases, performance constraints, and acceptance criteria.
5. **Single Source of Truth (\`explore.md\`)**:
   - Create \`openspec/changes/<change-id>/explore.md\` before proceeding.
   - Status is marked \`Frozen\`.

## 2. Propose Phase (\`propose\`)
When generating proposals:
1. **SSOT Reliance**: Base all technical decisions strictly on \`explore.md\`.
2. **Mandatory Review / Gap Analysis**: Perform an automated verification pass to ensure zero lost intent from \`explore.md\`.
3. **Artifact Generation**: Generate \`proposal.md\`, \`specs/\`, \`design.md\`, and \`tasks.md\`.
4. **Interactive Spec Viewer**:
   - Compile \`spec-viewer.html\` for human-in-the-loop review.

## 3. Apply Phase (\`apply\`)
When implementing:
- Verify that all comments are resolved.
- Implement tasks from \`tasks.md\` sequentially.

"
`;

exports[`Golden Master Rules Output Snapshots > should generate cursor rules with mdc frontmatter 1`] = `
"---
description: OpenSpec-Ex Spec-Driven Development (SDD) Protocol
globs: ["openspec/**", ".openspec/**"]
alwaysApply: true
---

# OpenSpec Workflow Rules (Enhanced Edition)

This project follows **OpenSpec Spec-Driven Development (SDD)** with Single Source of Truth (SSOT) discovery, Subagent Research Delegation, proactive Q&A interviewing, proposal self-audit verification, Anti-Execution Guardrails, and interactive spec review.

## 1. Explore Phase (\`explore\`)
When exploring changes, ideas, or problems:
1. **Explore Stance & Anti-Execution Guardrail**:
   - Explore mode is **strictly for thinking, discovery, and freezing requirements**, NEVER for implementing application code.
   - Do NOT emit generic IDE \`implementation_plan.md\` planning files or execute code changes during Explore mode.
   - All thinking and requirements MUST be frozen exclusively into \`explore.md\`.
2. **Subagent Delegation Protocol**:
   - When exploring multi-module architectures or deep codebases, delegate targeted research to subagents (*Codebase Mapper*, *Data & Schema Auditor*, *Blast Radius Analyst*).
   - Subagents save full briefs to \`openspec/changes/<change-id>/discovery/*.md\` and return concise ~200-word summaries.
3. **Verbatim Prompt Capture**: Always capture the user's initial verbatim prompt into context without losing requirements.
4. **Proactive Interviewing**: Ask 3–5 sharp, targeted questions to clarify boundaries, edge cases, performance constraints, and acceptance criteria.
5. **Single Source of Truth (\`explore.md\`)**:
   - Create \`openspec/changes/<change-id>/explore.md\` before proceeding.
   - Status is marked \`Frozen\`.

## 2. Propose Phase (\`propose\`)
When generating proposals:
1. **SSOT Reliance**: Base all technical decisions strictly on \`explore.md\`.
2. **Mandatory Review / Gap Analysis**: Perform an automated verification pass to ensure zero lost intent from \`explore.md\`.
3. **Artifact Generation**: Generate \`proposal.md\`, \`specs/\`, \`design.md\`, and \`tasks.md\`.
4. **Interactive Spec Viewer**:
   - Compile \`spec-viewer.html\` for human-in-the-loop review.

## 3. Apply Phase (\`apply\`)
When implementing:
- Verify that all comments are resolved.
- Implement tasks from \`tasks.md\` sequentially.

"
`;

exports[`Golden Master Rules Output Snapshots > should generate universal rules matching OpenSpec spec-driven standards 1`] = `
"# OpenSpec Workflow Rules (Enhanced Edition)

This project follows **OpenSpec Spec-Driven Development (SDD)** with Single Source of Truth (SSOT) discovery, Subagent Research Delegation, proactive Q&A interviewing, proposal self-audit verification, Anti-Execution Guardrails, and interactive spec review.

## 1. Explore Phase (\`explore\`)
When exploring changes, ideas, or problems:
1. **Explore Stance & Anti-Execution Guardrail**:
   - Explore mode is **strictly for thinking, discovery, and freezing requirements**, NEVER for implementing application code.
   - Do NOT emit generic IDE \`implementation_plan.md\` planning files or execute code changes during Explore mode.
   - All thinking and requirements MUST be frozen exclusively into \`explore.md\`.
2. **Subagent Delegation Protocol**:
   - When exploring multi-module architectures or deep codebases, delegate targeted research to subagents (*Codebase Mapper*, *Data & Schema Auditor*, *Blast Radius Analyst*).
   - Subagents save full briefs to \`openspec/changes/<change-id>/discovery/*.md\` and return concise ~200-word summaries.
3. **Verbatim Prompt Capture**: Always capture the user's initial verbatim prompt into context without losing requirements.
4. **Proactive Interviewing**: Ask 3–5 sharp, targeted questions to clarify boundaries, edge cases, performance constraints, and acceptance criteria.
5. **Single Source of Truth (\`explore.md\`)**:
   - Create \`openspec/changes/<change-id>/explore.md\` before proceeding.
   - Status is marked \`Frozen\`.

## 2. Propose Phase (\`propose\`)
When generating proposals:
1. **SSOT Reliance**: Base all technical decisions strictly on \`explore.md\`.
2. **Mandatory Review / Gap Analysis**: Perform an automated verification pass to ensure zero lost intent from \`explore.md\`.
3. **Artifact Generation**: Generate \`proposal.md\`, \`specs/\`, \`design.md\`, and \`tasks.md\`.
4. **Interactive Spec Viewer**:
   - Compile \`spec-viewer.html\` for human-in-the-loop review.

## 3. Apply Phase (\`apply\`)
When implementing:
- Verify that all comments are resolved.
- Implement tasks from \`tasks.md\` sequentially.
"
`;
